crates/test-files/fixtures/compile_errors/duplicate_var_in_for_loop.fe
contract C {
    fn f() {
        let x: u256 = 10
        let xs: Array<u8, 4> = [1, 2, 3, 4]
        let mut sum: u8 = 0
        for x in xs {
            sum += x
        }
    }
}
